Apex/fs-challenge/force-app/main/default/objects/Account/fields/CustomDate__c.field-meta.xml
<CustomField>
    <fullName>CustomDate__c</fullName>
    <description>Date field to compare test Date comparator</description>
    <label>Custom Date</label>
    <type>Date</type>
</CustomField>