Apex/fs-challenge/force-app/main/default/objects/Account/fields/DecimalNumber__c.field-meta.xml
<CustomField>
    <fullName>DecimalNumber__c</fullName>
    <label>Decimal Number</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>