Apex/fs-challenge/force-app/main/default/objects/Account/fields/IsPremier__c.field-meta.xml
<CustomField>
    <fullName>IsPremier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Premier Account? This means a special treatment with this Account</description>
    <inlineHelpText>Is Premier Account? This means a special treatment with this Account</inlineHelpText>
    <label>Is Premier</label>
    <type>Checkbox</type>
</CustomField>